--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li><a href="" class="text-white text-xl">Shop</a></li>
               <li><a href="" class="text-white text-xl">All Fruits</a></li>
             </ul>
-            <ul tabindex="0" class="menu menu-sm absolute lg:relative -left-16 w-28 dropdown-content mt-3 bg-red-500 z-[5]  shadow bg-base-100 rounded-box">
+            <ul tabindex="0" class="menu menu-sm absolute lg:relative -left-16 w-28 rounded-r-full dropdown-content mt-3 bg-red-500 z-[5]  shadow bg-base-100 rounded-box">
               <li><a href="">Home</a></li>
               <li><a href="">About us</a></li>
               <li><a href="">Shop</a></li>
