--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       <div class=" lg:mx-48 h-[250vh] md:h-[700px] lg:h-[650px] flex flex-wrap bg-cover items-center justify-center" style="background-image:url('./images/team.png');">
          <div class="mx-auto my-auto">
           <h3 class="text-center text-xl lg:text-5xl font-extrabold text-white lg:pt-20">Meet the team section</h3>
-         <p class="text-center lg:w-[600px] text-sm text-white pb-2 pb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical  Latin literature from 45 BC, making it over 2000 years old.</p>
+         <p class="text-center mx-auto lg:w-[600px] text-sm text-white pt-2">Contrary to popular belief, is not simply random text. It has roots in a piece of classical  Latin literature from 45 BC, making it over 2000 years old.</p>
          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
           <!-- first  one -->
           <div class="card">
@@ -428,7 +428,7 @@
       <div class="lg:mx-48 mx-auto mt-20">
        <div class="flex justify-center">
         <div class="gap-y-2">
-          <h4 class="font-extrabold text-5xl text-black text-center">Deal of the day</h4>
+          <h4 class="font-extrabold text-5xl text-black text-center">Why Choose us</h4>
           <p class="text-sm font-medium text-[#121212] text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br>Latin literature from 45 BC, making it over 2000 years old.</p>
           <div class="grid grid-cols-1 lg:grid-cols-3 gap-10 mt-20 mb-20">
             <div class="space-y-8">
@@ -457,7 +457,7 @@
                 </div>
               </div>
             </div>
-            <div>
+            <div class="">
               <img src="./images/whychoose1.png" alt="">
             </div>
             <div class="space-y-8">
